# stock-knowledge-graph

./: .gitignore  README.md  config.yaml  pyproject.toml  setup.sh
.github/workflows/: update-knowledge-graph.yml
.obsidian/: workspace.json
data/: overview.json
data/json/: AAPL.json  AMD.json  AMZN.json  AVGO.json  CCJ.json  CIEN.json  GOOG.json  HOOD.json  INTC.json  JPM.json  LLY.json  META.json  MRNA.json  MSFT.json  MSTR.json  MU.json  NBIS.json  NFLX.json  NVDA.json  ORCL.json  PLTR.json  SNDK.json  TSLA.json
data/markdown/: AAPL.md  AMD.md  AMZN.md  AVGO.md  CCJ.md  CIEN.md  GOOG.md  HOOD.md  INTC.md  JPM.md  LLY.md  META.md  MRNA.md  MSFT.md  MSTR.md  MU.md  NBIS.md  NFLX.md  NVDA.md  ORCL.md  PLTR.md  SNDK.md  TSLA.md  index.md
data/markdown/.obsidian/: graph.json  workspace.json
knowledge_graph/scripts/: extract_relationships.py  test_sources.py
