[project]
name = "stock-knowledge-graph"
version = "0.1.0"
description = "GitHub Actions driven stock knowledge graph"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=0.0.8",
    "pydantic>=2.0.0",
    "yfinance>=0.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "ddgs>=2.1.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["knowledge_graph"]
include = ["scripts"]
exclude = ["scripts/test_*"]

[tool.setuptools.package-data]
scripts = ["*.py"]
